force-app/main/default/objects/Contact/fields/Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account__c</fullName>
    <description>Bank account number for PII tracking</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Bank Account</label>
    <length>25</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>Text</type>
</CustomField>