force-app/main/default/objects/Contact/fields/IsPrimary__c.field-meta.xml
<CustomField>
    <fullName>IsPrimary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marks the primary contact used by AccountTriggerHandler flows.</description>
    <inlineHelpText>Set true for the contact treated as primary.</inlineHelpText>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>