force-app/main/default/objects/Contact/fields/Social_Security__c.field-meta.xml
<CustomField>
    <fullName>Social_Security__c</fullName>
    <description>Social Security Number for PII compliance tracking</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Social Security</label>
    <length>11</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>Text</type>
</CustomField>